# exocortex-tiny-py

./: .gitignore  AGENT.md  README.md  pyproject.toml
examples/: esp32_irrigation.py  esp32_monitor.py  esp32_robot.py
exocortex_tiny/: __init__.py  actuator.py  client.py  config.py  loop.py  sensor.py
tests/: test_actuator.py  test_client.py  test_config.py  test_loop.py  test_sensor.py
